--- a/landing.scss
+++ b/landing.scss
@@ -304,11 +304,9 @@ body {
     .grid-item-fifth{grid-column-start: 3;
       grid-column-end: 4; img{width: 414px;
         margin-left: -470px;
-      margin-top: auto;}
-    }
-  .prefecture-neighborhood-section{width: 1271px;
-  margin-right: 84px;
-  margin-left: 85px;
-  margin-top: 131px;
-}
-}
+      margin-top: auto;}}
+  .prefecture-neighborhood-section{width: 1271px;margin-right: 80px;margin-left: 85px;margin-top: 131px;}
+
+  }
+  
+
