--- a/landing.scss
+++ b/landing.scss
@@ -307,6 +307,62 @@ body {
       margin-top: auto;}}
   .prefecture-neighborhood-section{width: 1271px;margin-right: 80px;margin-left: 85px;margin-top: 131px;}
 
-  }
+  .prefecture-text-img>img{width: 597; margin-right: 758px;margin-left: 85px;}
+ .text h1{width: 357px;margin-bottom: 85px; margin-right: 293px;
+  font-family: Lato;
+  font-size: 30px;
+  font-weight: 500;
+  line-height: 40px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: #102746;}
+  .text h2{margin-right: 131px;margin-left: 790px;margin-top: 85px;
+    width: 519px;font-family: Lato;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0px;
+    text-align: left;
+    color: #102746;}
+    .text h3{width: 144px;margin-top: 58px;margin-left: 791px;margin-right: 591px;font-family: Lato;
+      font-size: 16px;
+      font-weight: 300;
+      line-height: 24px;
+      letter-spacing: 0px;
+      text-align: right;
+      font-family: Lato;color: #006DFE;}
+  .text h3 img{width: 33px;margin-top:66px;}
+.neighborhood-text-img>img{margin-top: 134px;margin-right: 84px;width: 597px;
+margin-left: 759px;}
+.text-neighborhood h4{width: 357px;margin-top: 45px;margin-left: 132px;margin-right:132px;margin-top:588px;
+  font-family: Lato;
+  font-size: 30px;
+  font-weight: 500;
+  line-height: 40px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: #102746;}
+.tex-neighborhood h5{width: 519px;margin-top: 45px;margin-right: 97px;
+margin-left: 132px;font-family: Lato;
+font-size: 16px;
+font-weight: 300;
+line-height: 24px;
+letter-spacing: 0px;
+text-align: left;
+color: #102746}
+.text-neighborhood h6{font-family: Lato;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: #006DFE;
+  margin-top: 94px;
+  margin-left: 132px;
+  margin-right: 437px;}
+  .text-neighborhood h6 img{margin-top: 102px;
+  margin-bottom: 160px;
+margin-left: 27px;margin-right:377px;}
+}
   
 
