--- a/landing.css
+++ b/landing.css
@@ -339,4 +339,103 @@ body {
   margin-right: 80px;
   margin-left: 85px;
   margin-top: 131px;
+}
+.second-part .prefecture-text-img > img {
+  width: 597;
+  margin-right: 758px;
+  margin-left: 85px;
+}
+.second-part .text h1 {
+  width: 357px;
+  margin-bottom: 85px;
+  margin-right: 293px;
+  font-family: Lato;
+  font-size: 30px;
+  font-weight: 500;
+  line-height: 40px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: #102746;
+}
+.second-part .text h2 {
+  margin-right: 131px;
+  margin-left: 790px;
+  margin-top: 85px;
+  width: 519px;
+  font-family: Lato;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: #102746;
+}
+.second-part .text h3 {
+  width: 144px;
+  margin-top: 58px;
+  margin-left: 791px;
+  margin-right: 591px;
+  font-family: Lato;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 24px;
+  letter-spacing: 0px;
+  text-align: right;
+  font-family: Lato;
+  color: #006DFE;
+}
+.second-part .text h3 img {
+  width: 33px;
+  margin-top: 66px;
+}
+.second-part .neighborhood-text-img > img {
+  margin-top: 134px;
+  margin-right: 84px;
+  width: 597px;
+  margin-left: 759px;
+}
+.second-part .text-neighborhood h4 {
+  width: 357px;
+  margin-top: 45px;
+  margin-left: 132px;
+  margin-right: 132px;
+  margin-top: 588px;
+  font-family: Lato;
+  font-size: 30px;
+  font-weight: 500;
+  line-height: 40px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: #102746;
+}
+.second-part .tex-neighborhood h5 {
+  width: 519px;
+  margin-top: 45px;
+  margin-right: 97px;
+  margin-left: 132px;
+  font-family: Lato;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 24px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: #102746;
+}
+.second-part .text-neighborhood h6 {
+  font-family: Lato;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: #006DFE;
+  margin-top: 94px;
+  margin-left: 132px;
+  margin-right: 437px;
+}
+.second-part .text-neighborhood h6 img {
+  margin-top: 102px;
+  margin-bottom: 160px;
+  margin-left: 27px;
+  margin-right: 377px;
 }/*# sourceMappingURL=landing.css.map */
