--- a/landing.scss
+++ b/landing.scss
@@ -372,19 +372,27 @@ margin-left: 27px;margin-right:377px;}
   color: #102746;
 border-bottom:2px Solid #006DFE;}
 .nagoya{width:392px;margin-left: 81px}
-.nagoya div img{width: 386px; margin-top: 54;margin-bottom: 45px;}
+.nagoya.image-wrapper{width: 386px; margin-top: 54;margin-bottom: 45px;position: relative;}
+.nagoya.image-info{position: absolute;background-color:#151824;}
 text{width: 391px;font-family: Lato;
   font-size: 16px;
   font-weight: 300;
   line-height: 24px;
   letter-spacing: 0px;
   text-align: left;
-  color: #102746;};div button{width: 118px;margin-top: 31px;
+  color: #102746;};
+  div button{width: 118px;margin-top: 31px;
     background-color: #006DFE;font-family: Lato;
     font-size: 16px;
     font-weight: 400;
     line-height: 19px;
     letter-spacing: 0px;
-    padding: 12px 19px;color: #ffffff;border: 0; }}
-  
+    padding: 12px 19px;color: #ffffff;border: 0; }
+ }
+ footer {
+  background-color: #0E1D28;
+  .inside-footer {
+    padding: 118px 167px 118px 194px;
+  }
+ } 
 
