--- a/landing.scss
+++ b/landing.scss
@@ -260,139 +260,284 @@ body {
       }
     }
   }
-  .get-inspired-section{width: 1264px;
-  margin-left: 88px;
-  margin-right: 88px;
-  margin-top: 136px;}
-  .get-inspired-header{width: 457px;font-family: Lato;
+  .get-inspired-section {
+    width: 1264px;
+    margin-left: 88px;
+    margin-right: 88px;
+    margin-top: 136px;
+  }
+  .get-inspired-header {
+    width: 457px;
+    font-family: Lato;
     font-size: 35px;
     font-weight: 400;
     line-height: 42px;
     letter-spacing: 0px;
     text-align: left;
     color: #102746;
-    border-bottom: 2px solid #006DFE;margin-top: 7px;
-    }
-  .get-inspired-view{font-family: Lato;
+    border-bottom: 2px solid #006dfe;
+    margin-top: 7px;
+  }
+  .get-inspired-view {
+    font-family: Lato;
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
     letter-spacing: 0px;
     text-align: right;
-    color: #006DFE;
+    color: #006dfe;
     margin-top: 14px;
-    img{width: 33px;height: 8px;margin-top: 7px; }}
-    
-  .grid-container{display: grid;
-    grid-template-columns: 619px 619px 415px 415px 414px;
-   
-  ;
-   }
-  .grid-item-first{grid-column-start: 1;
-  grid-column-end: 2;
- ;
- img{width: 619px;margin-bottom:auto;}}
-  .grid-item-second{grid-column-start: 2;
-  grid-column-end: 4;img{width: 619px;margin-bottom:-391px;}}
-  .grid-item-third{grid-column-start: 1;
-  grid-column-end: 2;img{width: 415px;margin-top:auto}
- }
-  .grid-item-fourth{grid-column-start: 2;
-    grid-column-end: 3; img{width: 415px;
-       margin-left: -235px;margin-top: auto}
+    img {
+      width: 33px;
+      height: 8px;
+      margin-top: 7px;
+    }
   }
-    .grid-item-fifth{grid-column-start: 3;
-      grid-column-end: 4; img{width: 414px;
-        margin-left: -470px;
-      margin-top: auto;}}
-  .prefecture-neighborhood-section{width: 1271px;margin-right: 84px;margin-left: 85px;margin-top: 131px;}
 
-  .prefecture-text-img>img{width: 597; margin-right: 758px;margin-left: 85px;}
- .text h1{width: 357px;margin-bottom: 85px; margin-right: 293px;margin-left: 790px;margin-top: -331px;
-  font-family: Lato;
-  font-size: 30px;
-  font-weight: 500;
-  line-height: 40px;
-  letter-spacing: 0px;
-  text-align: left;
-  color: #102746;}
-  .text h2{margin-right: 131px;margin-left: 759px;margin-top: 85px;
-    width: 519px;font-family: Lato;
+  .grid-container {
+    display: grid;
+    grid-template-columns: 619px 619px 415px 415px 414px;
+  }
+  .grid-item-first {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    img {
+      width: 619px;
+      margin-bottom: auto;
+    }
+  }
+  .grid-item-second {
+    grid-column-start: 2;
+    grid-column-end: 4;
+    img {
+      width: 619px;
+      margin-bottom: -391px;
+    }
+  }
+  .grid-item-third {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    img {
+      width: 415px;
+      margin-top: auto;
+    }
+  }
+  .grid-item-fourth {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    img {
+      width: 415px;
+      margin-left: -235px;
+      margin-top: auto;
+    }
+  }
+  .grid-item-fifth {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    img {
+      width: 414px;
+      margin-left: -470px;
+      margin-top: auto;
+    }
+  }
+  .prefecture-neighborhood-section {
+    width: 1271px;
+    margin-right: 84px;
+    margin-left: 85px;
+    margin-top: 131px;
+  }
+
+  .prefecture-text-img > img {
+    width: 597;
+    margin-right: 758px;
+    margin-left: 85px;
+  }
+  .text h1 {
+    width: 357px;
+    margin-bottom: 85px;
+    margin-right: 293px;
+    margin-left: 790px;
+    margin-top: -331px;
+    font-family: Lato;
+    font-size: 30px;
+    font-weight: 500;
+    line-height: 40px;
+    letter-spacing: 0px;
+    text-align: left;
+    color: #102746;
+  }
+  .text h2 {
+    margin-right: 131px;
+    margin-left: 759px;
+    margin-top: 85px;
+    width: 519px;
+    font-family: Lato;
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
     letter-spacing: 0px;
     text-align: left;
-    color: #102746;}
-    .text h3{width: 144px;margin-top: 58px;margin-left: 791px;margin-right: 591px;font-family: Lato;
-      font-size: 16px;
-      font-weight: 300;
-      line-height: 24px;
-      letter-spacing: 0px;
-      text-align: right;
-      font-family: Lato;color: #006DFE;}
-  .text h3 img{width: 33px;margin-top:66px;}
-.neighborhood-text-img>img{margin-top: 134px;margin-right: 84px;width: 597px;
-margin-left: 759px;}
-.text-neighborhood h4{width: 357px;margin-top:-316px;margin-left: 132px;margin-right:132px;
-  font-family: Lato;
-  font-size: 30px;
-  font-weight: 500;
-  line-height: 40px;
-  letter-spacing: 0px;
-  text-align: left;
-  color: #102746;};
-h5{width: 519px;margin-top: 45px;margin-right: 97px;
-margin-left: 132px;font-family: Lato;
-font-size: 16px;
-font-weight: 300;
-line-height: 24px;
-letter-spacing: 0px;
-text-align: left;
-color: #102746};
-h6{font-family: Lato;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0px;
-  text-align: left;
-  color: #006DFE;
-  margin-top: 94px;
-  margin-left: 132px;
-  margin-right: 437px;}
-;h6 img{margin-top: 102px;
-  margin-bottom: 160px;
-margin-left: 27px;margin-right:377px;}
-.header{width: 369px;margin-left: 85px;margin-right: 986px;margin-top: 152px;font-family: Lato;
-  font-size: 35px;
-  font-weight: 500;
-  line-height: 42px;
-  letter-spacing: 0px;
-  text-align: left;
-  color: #102746;
-border-bottom:2px Solid #006DFE;}
-.nagoya{width:392px;margin-left: 81px}
-.nagoya.image-wrapper{width: 386px; margin-top: 54;margin-bottom: 45px;position: relative;}
-.nagoya.image-info{position: absolute;background-color:#151824;}
-text{width: 391px;font-family: Lato;
-  font-size: 16px;
-  font-weight: 300;
-  line-height: 24px;
-  letter-spacing: 0px;
-  text-align: left;
-  color: #102746;};
-  div button{width: 118px;margin-top: 31px;
-    background-color: #006DFE;font-family: Lato;
+    color: #102746;
+  }
+  .text h3 {
+    width: 144px;
+    margin-top: 58px;
+    margin-left: 791px;
+    margin-right: 591px;
+    font-family: Lato;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 24px;
+    letter-spacing: 0px;
+    text-align: right;
+    font-family: Lato;
+    color: #006dfe;
+  }
+  .text h3 img {
+    width: 33px;
+    margin-top: 66px;
+  }
+  .neighborhood-text-img > img {
+    margin-top: 134px;
+    margin-right: 84px;
+    width: 597px;
+    margin-left: 759px;
+  }
+  .text-neighborhood h4 {
+    width: 357px;
+    margin-top: -316px;
+    margin-left: 132px;
+    margin-right: 132px;
+    font-family: Lato;
+    font-size: 30px;
+    font-weight: 500;
+    line-height: 40px;
+    letter-spacing: 0px;
+    text-align: left;
+    color: #102746;
+  }
+  h5 {
+    width: 519px;
+    margin-top: 45px;
+    margin-right: 97px;
+    margin-left: 132px;
+    font-family: Lato;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 24px;
+    letter-spacing: 0px;
+    text-align: left;
+    color: #102746;
+  }
+  h6 {
+    font-family: Lato;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0px;
+    text-align: left;
+    color: #006dfe;
+    margin-top: 94px;
+    margin-left: 132px;
+    margin-right: 437px;
+  }
+  h6 img {
+    margin-top: 102px;
+    margin-bottom: 160px;
+    margin-left: 27px;
+    margin-right: 377px;
+  }
+  .header {
+    width: 369px;
+    margin-left: 85px;
+    margin-right: 986px;
+    margin-top: 152px;
+    font-family: Lato;
+    font-size: 35px;
+    font-weight: 500;
+    line-height: 42px;
+    letter-spacing: 0px;
+    text-align: left;
+    color: #102746;
+    border-bottom: 2px Solid #006dfe;
+  }
+  .nagoya {
+    width: 392px;
+    margin-left: 81px;
+  }
+  .nagoya.image-wrapper {
+    width: 386px;
+    margin-top: 54;
+    margin-bottom: 45px;
+    position: relative;
+  }
+  .nagoya.image-info {
+    position: absolute;
+    background-color: #151824;
+  }
+  text {
+    width: 391px;
+    font-family: Lato;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 24px;
+    letter-spacing: 0px;
+    text-align: left;
+    color: #102746;
+  }
+  div button {
+    width: 118px;
+    margin-top: 31px;
+    background-color: #006dfe;
+    font-family: Lato;
     font-size: 16px;
     font-weight: 400;
     line-height: 19px;
     letter-spacing: 0px;
-    padding: 12px 19px;color: #ffffff;border: 0; }
- }
- footer {
-  background-color: #0E1D28;
+    padding: 12px 19px;
+    color: #ffffff;
+    border: 0;
+  }
+}
+.video-section {
+  margin-top: 144px;
+  img {
+    object-fit: cover;
+  }
+}
+footer {
+  background-color: #0e1d28;
   .inside-footer {
     padding: 118px 167px 118px 194px;
+    display: flex;
+    justify-content: space-between;
+    img {
+      align-self: flex-start;
+    }
+    .menu-footer {
+      display: flex;
+      justify-content: space-between;
+      gap: 139.5px;
+      .footer-columns {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        font-family: "Lato";
+        font-style: normal;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 24px;
+        color: #ffffff;
+        a {
+          font-family: "Lato";
+          font-style: normal;
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 24px;
+          color: #ffffff;
+          text-decoration: none;
+        }
+      }
+    }
   }
- } 
-
+}
